Revise UTK.md after Paul reviewed and made suggestions.