@@ -2,12 +2,12 @@
 
 ## Overview:
 
-The Islandora repo, "digital", is deployed on a Dell PowerEdge 715 rack mount server.
+The Islandora repo, "digital", is deployed on a Dell R530 rack mount server.
 
 * Red Hat Enterprise Linux 7.1 x64
-* 24 cores
-* 64G RAM
-* 4TB RAID
+* 40 cores
+* 128G RAM
+* 2.5TB RAID
 
 A similar test server has the same versions of software.
 
@@ -33,39 +33,41 @@ from these parts of the vagrant install scripts to allow ingests to the main fed
 ## Software versions:
 
 * Adore-Djatoka: 1.1
-* Apache: 2.4.6-31
-* Drupal: 7.39
+* Apache: 2.4.6-40  
+* Drupal: 7.43
 * ffmpeg: git-2015-01-27-3c831fb
 * FITS: 0.8.5
 * Islandora: HEAD
-* Java: 1.7 (Oracle)
+* Java: 1.8 (Oracle)
 * jQuery: 
 * jQuery UI: 
 * Fedora: 3.7.1
 * Fedora GSearch: 2.7
-* MariaDB: 5.5.44
+* MariaDB: 5.5.47
 * Solr: 4.2.0
-* Tesseract: 3.02.02
+* Tesseract: 3.04.00 (from Red Hat repo)
+* leptonica 1.72 (from Red Hat repo)
 * Tomcat: 6.0.35
  
 
 ## Settings:
 
 * ffmpeg:  --enable-gpl --enable-nonfree --enable-libmp3lame --enable-libvorbis --enable-libvpx --enable-libx264
-* JAVA_OPTS= -server -Xmx4096m -Xms4096m
- -XX:MaxPermSize=1024m
- -XX:+UseParNewGC
- -XX:+UseConcMarkSweepGC
- -XX:+CMSClassUnloadingEnabled
- -Djavax.net.ssl.trustStore=/vhosts/fedora/server/truststore
- -Djavax.net.ssl.trustStorePassword=tomcat
- -Djava.awt.headless=true
- -Dkakadu.home=/opt/adore-djatoka/bin/Linux-x86-64
- -Djava.library.path=/opt/adore-djatoka/lib/Linux-x86-64
- -DLD_LIBRARY_PATH=/opt/adore-djatoka/lib/Linux-x86-64
+* JAVA_OPTS= -server -Xmn4096M -Xms12288M -Xmx12288M
+  -XX:PermSize=1024m
+  -XX:MaxPermSize=1024m
+  -XX:+UseParNewGC
+  -XX:+UseConcMarkSweepGC
+  -XX:+CMSParallelRemarkEnabled
+  -Djavax.net.ssl.trustStore=/vhosts/fedora/server/truststore
+  -Djavax.net.ssl.trustStorePassword=tomcat
+  -Djava.awt.headless=true
+  -Dkakadu.home=/opt/adore-djatoka/bin/Linux-x86-64
+  -Djava.library.path=/opt/adore-djatoka/lib/Linux-x86-64
+  -DLD_LIBRARY_PATH=/opt/adore-djatoka/lib/Linux-x86-64
+
  
 * PHP memory limit: 4096M
-* Tesseract 3.02.02 : leptonica-1.71  libjpeg 6b : libpng 1.5.13 : libtiff 4.0.3 : zlib 1.2.7 : libwebp 0.3.0
 
 ## Fedora XACML policies:
 ```
